@@ -72,7 +72,7 @@ setMethod("initialize", "SdiagMatrix",
 		if (is.vector(ubound)) {
 			ubound <- populateSdiagTriangle(ubound, nrow, as.numeric(NA), byrow, 'ubound')
 		}
-		retval <- callNextMethod(.Object, labels, values, free, lbound, ubound, name)
+		retval <- callNextMethod(.Object, labels, values, free, lbound, ubound, nrow, ncol, name)
 		return(retval)
 	}
 )
