@@ -75,7 +75,7 @@ setMethod("initialize", "StandMatrix",
 		if (is.vector(ubound)) {
 			ubound <- populateStandTriangle(ubound, nrow, as.numeric(NA), byrow, 'ubound')
 		}
-		retval <- callNextMethod(.Object, labels, values, free, lbound, ubound, name)
+		retval <- callNextMethod(.Object, labels, values, free, lbound, ubound, nrow, ncol, name)
 		return(retval)
 	}
 )
