@@ -40,7 +40,7 @@ setMethod("initialize", "ZeroMatrix",
 		free <- matrix(FALSE, nrow, ncol)
 		lbound <- matrix(as.numeric(NA), nrow, ncol)
 		ubound <- matrix(as.numeric(NA), nrow, ncol)
-		return(callNextMethod(.Object, labels, values, free, lbound, ubound, name))
+		return(callNextMethod(.Object, labels, values, free, lbound, ubound, nrow, ncol, name))
 	}
 )
 
